<resources>
    <string name="app_name">VoiceGameJava</string>
    <string name="appName">Shout Game</string>
    <string name="carGameTitle">Speed for win</string>
    <string name="runGameTitle">Run sooner</string>
    <string name="weightGameTitle">Fill it</string>
    <string name="fishGameTitle">Shout to up</string>
    <string name="StartGameTxt">Go</string>
    <string name="_1_player_txt">1 player</string>
    <string name="number_of_player_txt">Select players</string>
    <string name="_2_player_txt">2 player</string>
    <string name="_3_player_txt">3 player</string>
    <string name="_4_player_txt">4 player</string>
    <string name="playwithBotMsg">Do you want play with robot?</string>
    <string name="negativeBtnTxt">No</string>
    <string name="possitiveBtnTxt">Yes</string>
    <string name="startBtnNumberPlayer">start</string>
    <string name="player4_txt">PlayerFour</string>
    <string name="player3_txt">PlayerThree</string>
    <string name="player2_txt">PlayerTwo</string>
    <string name="player">Player</string>
    <string name="player1_txt">PlayerOne</string>
    <string name="playerName1">player1</string>
    <string name="playerName2">player2</string>
    <string name="playerName3">player3</string>
    <string name="playerName4">player4</string>

    <string name="changeTxtPlayer1">1</string>
    <string name="changeTxtPlayer2">2</string>
    <string name="changeTxtPlayer3">1</string>
    <string name="changeTxtPlayer4">4</string>
    <string name="are_you_ready">Ready?</string>
    <string name="name_error">put your name</string>
    <string name="scoreMsg">loose</string>
    <string name="nextBtn">Next</string>
    <string name="finishMsg">finish</string>
    <string name="see_result">see results</string>
    <string name="result_player_name">playerOne</string>
    <string name="result_player_score">score</string>
    <string name="player1_color">red</string>
    <string name="player2_color">green</string>
    <string name="player3_color">yellow</string>
    <string name="player4_color">blue</string>
    <string name="red_color">red</string>
    <string name="green_color">green</string>
    <string name="yellow_color">yellow</string>
    <string name="blue_color">blue</string>
    <string name="plus">+</string>
    <string name="main_menu">Menu</string>
    <string name="nitrogen_txt">Nitro</string>
    <string name="late_click_txt">Late Click</string>
    <string name="robot_txt">Robot</string>
    <string name="you_txt">You</string>
    <string name="robot1">Robot1</string>
    <string name="robot2">Robot2</string>
    <string name="robot3">Robot3</string>
    <string name="robot4">Robot4</string>
    <string name="robot_play">Robot Play</string>
    <string name="click_to_fast">Click To Fast</string>
    <string name="give_perms">Please reinstall the app and Give us permission for better performance.</string>
    <string name="robot">Robot</string>
    <string name="human">human</string>
    <string name="select_players_feild">please select at least two player that one of them is human</string>
    <string name="restart">Restart</string>
    <string name="start_txt">start</string>
    <string name="final_score_txt">score:</string>
    <string name="select_game_msg">select at least one game</string>
</resources>